--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-within-textarea": "^3.2.1",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0"
   }
