--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.321.0",
     "match-sorter": "^6.3.3",
